--- a/style.css
+++ b/style.css
@@ -21,6 +21,34 @@ body {
     margin: 10px 0;
     color: #facc15;
 }
+
+.progress-wrap {
+    background-color: #1e293b;
+    border-radius: 999px;
+    height: 10px;
+    margin: 10px 0;
+}
+
+.progress {
+    height: 100%;
+    width: 0%;
+    background-color: #7c3aed;
+    border-radius: 999px;
+    transition: width 0.3s linear;
+}
+
+.correct {
+  background-color: #16a34a;
+  color: white;
+  font-weight: bold;
+}
+
+.wrong {
+  background-color: #dc2626;
+  color: white;
+  font-weight: bold;
+}
+
 #question {
     margin: 15px 0;
     font-size: 18px;
