--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     background-color: #0f172a;
     color: #e5e7eb;
     display: flex;
@@ -32,7 +32,7 @@ body {
 .progress {
     height: 100%;
     width: 0%;
-    background-color: #7c3aed;
+    background-color: #bd77d5;
     border-radius: 999px;
     transition: width 0.3s linear;
 }
@@ -61,6 +61,7 @@ body {
 }
 
 .option-btn {
+    font-family: inherit;
     padding: 10px;
     background-color: #1e293b;
     color: #e5e7eb;
@@ -77,10 +78,11 @@ body {
 }
 
 #next-btn {
+    font-family: inherit;
     padding: 10px;
     width: 100%;
     border: none;
-    background-color: #ecc8f8;
+    background-color: #bd77d5;
     color: black;
     border-radius: 5px;
     cursor: pointer;
